# clox

./: CMakeLists.txt  LICENSE  bytecode.txt  grammar.txt
private/: array.h  (+10 more)
src/: CMakeLists.txt  array.c  chunk.c  clox.c  compiler.c  debug.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
src/native/: native.c
tests/: CMakeLists.txt  main.py
tests/assignment/assign_invalid_target/: code.lox  error
tests/assignment/assign_self_illegal/: error
tests/assignment/assign_self_illegal_2/: code.lox  error
tests/assignment/assign_self_legal/: code.lox
tests/assignment/global_assign_twice/: code.lox
tests/assignment/global_const_redeclare/: code.lox  error
tests/assignment/global_define/: code.lox  out
tests/assignment/global_redeclare/: code.lox
tests/assignment/global_redeclare_const/: code.lox  error
tests/assignment/local_assign/: code.lox
tests/assignment/local_assign_twice/: code.lox
tests/assignment/local_redeclare/: code.lox  error
tests/assignment/shadowing/local_shadow_global/: code.lox
tests/assignment/shadowing/local_shadow_local/: code.lox
tests/assignment/shadowing/local_shadow_nested/: code.lox  out
tests/classes/general_1/: code.lox
tests/classes/inheritance/inherit_nonclass/: code.lox  error
tests/classes/inheritance/inherit_self/: code.lox  error
tests/classes/inheritance/super_invoke/: code.lox  out
tests/functions/function_bad_argc/: code.lox  error
tests/functions/function_good_argc/: code.lox
tests/functions/function_nested/: code.lox
tests/functions/function_recursive/: code.lox
tests/functions/function_return/: code.lox
tests/keywords/break_for/: code.lox
tests/keywords/break_illegal_1/: error
tests/keywords/break_illegal_2/: code.lox  error
tests/keywords/break_switch/: code.lox
tests/keywords/continue_for_if/: code.lox
tests/keywords/continue_for_switch/: code.lox
tests/keywords/continue_illegal_1/: error
tests/keywords/continue_while/: code.lox  out
tests/keywords/continue_while_if/: code.lox
tests/keywords/continue_while_switch/: code.lox
tests/native/get_property_undefined/: code.lox
tests/native/has_property/: code.lox  out
tests/native/native_bad_argc/: code.lox  error
tests/native/remove_property/: code.lox  out
tests/native/set_get_property/: code.lox
tests/operators/add/: code.lox  output
tests/operators/divide_1/: code.lox  out
tests/operators/divide_2/: code.lox
tests/operators/divide_by_zero_1/: code.lox  error
tests/operators/divide_by_zero_2/: code.lox
tests/operators/modulo_1/: code.lox
tests/operators/modulo_2/: code.lox
tests/operators/multiply_1/: code.lox
tests/operators/multiply_2/: code.lox
tests/operators/negate/: code.lox
tests/operators/negate_chained/: code.lox
tests/operators/not/: code.lox
tests/operators/subtract/: code.lox  out
tests/switch/empty_switch/: code.lox  error
tests/switch/switch_no_cases/: code.lox
tests/switch/two_defaults/: code.lox  error
(+26 files in other folders)
